force-app/main/default/objects/Copado_License__c/fields/Enable_ADD__c.field-meta.xml
<CustomField>
    <fullName>Enable_ADD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Data Deployer License</description>
    <label>Enable ADD</label>
    <type>Checkbox</type>
</CustomField>