force-app/main/default/objects/Copado_License__c/fields/Enable_CCH__c.field-meta.xml
<CustomField>
    <fullName>Enable_CCH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Compliance Hub License
CCH - Copado Compliance Hub</description>
    <label>Enable CCH</label>
    <type>Checkbox</type>
</CustomField>