force-app/main/default/objects/Copado_License__c/fields/Enable_Copado__c.field-meta.xml
<CustomField>
    <fullName>Enable_Copado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copado Admin License</description>
    <label>Enable Copado</label>
    <type>Checkbox</type>
</CustomField>