force-app/main/default/objects/Copado_License__c/fields/Enable_CST__c.field-meta.xml
<CustomField>
    <fullName>Enable_CST__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selenium Testing License
CST - Copado Selenium Testing</description>
    <label>Enable CST</label>
    <type>Checkbox</type>
</CustomField>